codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_consent_accept_feedback.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Run a dynamic workflow?

  Workflow Feedback workflow
  Collect inline consent feedback.

  Phases
  1. Run

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it      tell Codex what to do next
  2. View raw script
  3. No

  ctrl + g edit in $EDITOR
