codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_consent_accept_feedback_after_toggle.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Run a dynamic workflow?

  Collect inline consent feedback.

   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  ╎ return 'feedback';                                                                           ╎
   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it              continue with report
  2. View workflow summary
  3. No

  ctrl + g edit in $EDITOR
