codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_consent_raw.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Run a dynamic workflow?

  export const meta = {name: 'proof', description: 'Proof'};
  return 'raw';

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it
  2. View workflow summary
  3. No

  ctrl + g edit in $EDITOR
