codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_consent_summary.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Run a dynamic workflow?

  Checks the consent summary before launching.

  This dynamic workflow will spin up multiple subagents across the following phases:
    1. Inspect — Read the selected source bytes.
    2. Report

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it
  2. View raw script
  3. No

  ctrl + g edit in $EDITOR
