codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_saved_consent.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
assertion_line: 464
expression: popup
---
  Run workflow /saved?

› 1. Run once
  2. Run and remember for this project
  3. View raw script
  4. Cancel

  Press enter to confirm or esc to go back
