codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_saved_consent_summary.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Run a dynamic workflow?

  Workflow saved-proof
  Run a saved proof workflow.

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it
  2. Yes, and don't ask again for /saved-proof in /tmp/project
  3. View raw script
  4. No

  ctrl + g edit in $EDITOR
