codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__workflow_preview_tests__workflow_saved_source_preview.snap
---
source: tui/src/app/tests/workflow_preview_tests.rs
expression: rendered
---
  Run a dynamic workflow?

  Preview the selected workflow source.

   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  ╎ export const meta = {name: 'saved'};                                                         ╎
  ╎ return 'saved source';                                                                       ╎
   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌

  You can stop a running workflow at any time with /workflows, or disable dynamic workflows in
  /config.

› 1. Yes, run it
  2. Yes, and don't ask again for /saved in /private/var/folders/s1/
     l1n0ht5d5j5__hqxv0d_6q2w0000gn/T/[TEMP]
  3. View workflow summary
  4. No

  ctrl + g edit in $EDITOR
